--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,10 +4,11 @@
 
   --background-characteristics-pokemon-color: #6b806c41;
   --border-color: #c5c5c5;
+  --text-color: #535353;
 
   --gren-500: #77c850;
   --white: white;
-  --black: #000  
+  --black: #000;
 }
 
 * {
@@ -30,7 +31,13 @@ main {
   max-width: 1024px;
   border-radius: 1rem;
   margin: 3rem auto;
+}
 
+a,
+input,
+p,
+span {
+  color: var(--text-color);
 }
 
 ol.pokemons {
@@ -47,24 +54,30 @@ ol.pokemons .pokemon {
   gap: 1rem;
 }
 
-ol.pokemons .pokemon .header{
+ol.pokemons .pokemon .header {
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: space-between;
 }
 
+ol.pokemons .pokemon .header .number, ol.pokemons .pokemon .header .name{
+  margin: 0;
+  width: fit-content;
+}
+
 ol.pokemons .pokemon .header .name {
   color: var(--white);
   font-weight: 500;
+  text-transform: capitalize;
 }
 
-ol.pokemons .pokemon .header .number{
+ol.pokemons .pokemon .header .number {
   color: var(--black);
-  opacity: .4;
+  opacity: 0.4;
 }
 
-.details{
+.details {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -74,20 +87,34 @@ ol.pokemons .pokemon .header .number{
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: .5rem
+  gap: 0.5rem;
 }
 
 .details .type {
   filter: brightness(1.1);
-  padding: .25rem .5rem;
+  padding: 0.25rem 0.5rem;
   border-radius: 5rem;
   width: fit-content;
   height: fit-content;
   color: var(--white);
-  font-size: .95rem;
+  font-size: 0.95rem;
 }
 
-.details img{
+.details img {
   width: 4.5rem;
 }
 
+main span {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  gap: 0.25rem;
+}
+
+main span a {
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--black);
+  margin-bottom: 3rem;
+}
